--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-actions": "^0.12.0",
-    "redux-api-middleware": "^1.0.2",
-    "redux-thunk": "^2.1.0"
+    "redux-api-middleware": "^1.0.2"
   }
 }
