--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
   "rules": {
     "react/react-in-jsx-scope": 0,
     "react/jsx-filename-extension": 0,
+    "react/forbid-prop-types": 0,
     "import/prefer-default-export": 0,
     "import/imports-first": 0,
   },
