--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.16.0",
     "postcss-font-magician": "^1.4.0",
@@ -43,10 +44,12 @@
   },
   "dependencies": {
     "flexbox-react": "^4.0.0",
+    "is-url": "^1.2.2",
     "normalize.css": "^4.1.1",
     "react": "^15.3.2",
     "react-debounce-input": "^2.4.0",
     "react-dom": "^15.0.1",
+    "react-drag-and-drop": "^2.0.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-actions": "^0.12.0",
